lang.java.statics.test/tests/packages/qualified-reference-to-missing-package.no.spt
module packages/qualified-reference-to-missing-package_no

language metaborg-java

test qualified-reference-to-missing-package [[

test;



// error: package q does not exist

[p] {

    [A]
    package p;
    public class A {
        public q.B b;
    }

}

]] analysis fails
   run javacFails to ""
